# eis_validator

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  QWEN.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.cursor/plans/: chat_frontend_tab_9d5e8209.plan.md  docker_compose_production_setup_6c6a4b9a.plan.md  eis_parse_frontend_1dcead8f.plan.md  markdown_streaming_query_cbde25d8.plan.md  parse_handler_d96b3131.plan.md  pdf_embedding_indexer_49540a96.plan.md  qdrant_rag_migration_02806ea4.plan.md  rag_query_streaming_handler_0ca1b695.plan.md  ssl_support_&_certs_46170da7.plan.md  validate_integration_frontend_86e9472a.plan.md  xsd_validation_handler_9d50102f.plan.md
docker/: generate_certs.sh
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ChatMessage.tsx  FileUpload.tsx  StatusBanner.tsx  ValidationPanel.tsx  XmlPanel.tsx
frontend/src/pages/: ChatPage.tsx  ValidatorPage.tsx
frontend/src/utils/: validation.ts
schemas/: DP_PAKET_EIS_01_00.xsd
src/: config.rs  error.rs  main.rs  state.rs
src/handlers/: mod.rs  parse.rs  query.rs  validate.rs
src/repository/: eis_documents.rs  mod.rs
src/routes/: mod.rs
