[package]
name = "eis_validator"
version = "0.1.0"
edition = "2021"
default-run = "eis_validator"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
libxml = "0.3"
tempfile = "3"
quick-xml = "0.39"
encoding_rs = "0.8"
base64 = "0.22"

# PDF indexer binary dependencies
rig-core = "0.35"
rig-sqlite = "0.2"
lopdf = "0.38"
walkdir = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = { version = "0.6", features = ["bundled"] }
sqlite-vec = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
