[package]
name = "eis_assistant"
version = "0.1.0"
edition = "2021"
default-run = "eis_assistant"

[[bin]]
name = "index_mds"
path = "src/bin/index_mds.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
libxml = "0.3"
tempfile = "3"
quick-xml = "0.39"
encoding_rs = "0.8"
base64 = "0.22"

# RAG / indexer dependencies
rig-core = { version = "0.36.0", features = ["derive"] }
rig-qdrant = "0.2.5"
qdrant-client = "1.17.0"
bm25 = "2.3.2"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
pulldown-cmark = "0.13"
